--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="sabre" id="sabre">
+    <div class="sabre">
         <div class="luz"></div>
         <div class="topo"></div>
         <div class="meio"></div>
         <div class="fim"></div>
     </div>
+
 </body>
 </html>
